# VeriAct

./: .gitignore  Makefile  README.md  pyproject.toml
baselines/: README.md
baselines/autospec/: README.md  autospec.py  autospec_runner.py  config.py  logger.py  prompts.py  run.py  utils.py
baselines/autospec/fewshots/loop/1/: ans  task
baselines/autospec/fewshots/loop/2/: ans  task
baselines/autospec/fewshots/loop/3/: ans  task
baselines/autospec/fewshots/loop/4/: ans  task
baselines/autospec/fewshots/method/1/: ans  task
baselines/autospec/fewshots/method/2/: ans  task
baselines/autospec/fewshots/method/3/: ans  task
baselines/autospec/fewshots/method/4/: ans  task
baselines/daikon/: README.md  __init__.py  daikon.sh  daikon_runner.py  inv_config.config  run.py  utils.py
baselines/formalbench/: README.md  example.py  fb_run.py  fb_runner.py  fb_spec.py  formalbench_runner.py  prompts.py  run.py  spec_fixer.py
baselines/formalbench/fixer/: spec_fixer.py
baselines/formalbench/infer/: spec_infer.py  spec_infer_run.py
baselines/houdini/: README.md  houdini.py  houdini_runner.py  logger.py  run.py  util.py
baselines/houdini/ESCTools2/: .classpath  .project  Makefile.local
baselines/houdini/ESCTools2/Houdini/: annotationGen
baselines/specgen/: README.md  config.py  logger.py  models.py  prompts.py  run.py  specgen.py  specgen_runner.py  utils.py
baselines/utils/: config.py  file_utility.py  logger.py  models.py  verifier.py
benchmarks/: README.md  example_data.json
benchmarks/example/: data.json
benchmarks/example/prompts/: autospec_prompt_four_shot.json  autospec_prompt_two_shot.json  formalbench_prompt_two_shot.json  specgen_prompt_four_shot.json
benchmarks/formalbench/: fb.json  fb.jsonl
benchmarks/specgenbench/: sgb.json  sgb.jsonl
config/: README.md
optimizer/: README.md  optimizer_utils.py  prompt_optimizer.py  run_optimizer.sh
optimizer/prompts/: autospec_prompt_zero_shot.json  formalbench_prompt_fs_cot.json  formalbench_prompt_fs_ltm.json  formalbench_prompt_zero_shot.json  formalbench_prompt_zs_cot.json  specgen_prompt_two_shot.json  specgen_prompt_zero_shot.json
scripts/: autospec.run.sh  daikon.run.sh  formalbench.run.sh  houdini.run.sh  run_optimizer.sh  run_spec_harness.sh  specgen.run.sh
scripts/vllm/: serve_codelamma_34B_ins.sh  serve_deepseek_coder_33B.sh  serve_qwen2.5_coder_32B.sh  serve_qwen3_32B.sh  start_vllm.sh  test_vLLM.py
spec_harness/: README.md  eval_llm_response.py  eval_spec.py  harness.py
veriact/: README.md  __init__.py  _function_type_hints_utils.py  agent.py  agent_types.py  codeact.py  config.py  data_types.py  default_tools.py  file_utility.py  harness_tool.py  memory.py  models.py  monitoring.py  run_batch.py  run_single.py  tool_validation.py  tools.py  tools_base.py  utility.py  verifier_tool.py
veriact/prompts/: veriact_prompt.yaml
vllm/: serve_deepseek_r1_qwen_32B.sh  serve_qwen2.5_coder_32B.sh  serve_qwen3_32B.sh  start_vllm.sh  test_vLLM.py
(+2 files in other folders)
