[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "specsyns"
version = "0.0.1"
description = "specsyns: Specification Synthesis from Program Invariants"
authors = [{ name = "MRHMisu", email = "mdrh@uci.edu" }]

readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[tool.setuptools.packages.find]
include = ["specsyns*", "baselines*", "config*"]

[tool.pytest.ini_options]
# Add the specified `OPTS` to the set of command line arguments as if they had been specified by the user.
addopts = "-sv --durations=0"


[tool.ruff]
line-length = 88 # Google style uses 88
lint.ignore = [
  "F403", # undefined-local-with-import-star
  "E501", # line-too-long
]
lint.select = ["E", "F", "I", "W", "D"] # Added D for docstring checks

[tool.ruff.format]
# Use Google-style formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.pydocstyle]
convention = "google" # Use Google docstring style

[tool.ruff.lint.isort]
known-first-party = ["specsyns"]
lines-after-imports = 2


[tool.setuptools.package-data]
"specsyns.prompts" = ["*.yaml"]

[project.scripts]
specsyns = "specsyns.cli:main"
