[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "veriact"
version = "0.0.1"
description = "veriact"
authors = [{ name = "MRHMisu", email = "mdrh@uci.edu" }]

readme = "README.md"
requires-python = ">=3.10"


dependencies = [
  "rich>=13.9.4",
  "jinja2>=3.1.4",
  "PyYAML>=6.0.2",
  "javalang>=0.13.0",
  "python-dotenv>=1.0.0",
  "openai>=1.58.1",
  "dspy>=3.1.3",
]


[tool.setuptools.packages.find]
include = ["config*", "baselines*", "optimizer*", "spec_harness*", "veriact*"]


[project.optional-dependencies]

docker = ["docker>=7.1.0", "websocket-client>=1.8.0"]

anthropic = ["anthropic>=0.39.0"]

google = ["google-genai>=1.0.0"]

ipython = ["ipython>=8.0.0"]

quality = ["ruff>=0.9.0"]

dev = ["pytest", "ruff>=0.9.0"]

all = [
  "anthropic>=0.39.0",
  "google-genai>=1.0.0",
  "docker>=7.1.0",
  "websocket-client>=1.8.0",
  "ipython>=8.0.0",
]


[tool.pytest.ini_options]
# Add the specified `OPTS` to the set of command line arguments as if they had been specified by the user.
addopts = "-sv --durations=0"

[tool.ruff]
line-length = 88 # Google style uses 88
lint.ignore = [
  "F403", # undefined-local-with-import-star
  "E501", # line-too-long
]
lint.select = ["E", "F", "I", "W", "D"] # Added D for docstring checks

[tool.ruff.format] # Use Google-style formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.pydocstyle] # Use Google docstring style
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["veriact"]
lines-after-imports = 2


[tool.setuptools.package-data]
"veriact.prompts" = ["*.yaml"]

[project.scripts]
veriact = "veriact.cli:main"
